app/assets/stylesheets/views/_transition-landing-page.scss
$dark-blue: #182D4E;
$red: #E61E32;

.large-paragraph {
  @include govuk-font($size: 19);
  margin: govuk-spacing(6) 0 govuk-spacing(1);

  @include govuk-media-query($from: tablet) {
    margin: 0;
  }
}

.landing-page__header {
  padding-bottom: govuk-spacing(6);
  padding-top: govuk-spacing(3);
  margin-bottom: govuk-spacing(6);
  background-color: $dark-blue;
  color: govuk-colour("white");
}

.landing-page__intro {
  p {
    color: govuk-colour("white");
  }

  a:link,
  a:visited {
    font-weight: bold;
    color: govuk-colour("white");
  }

  a:focus {
    color: govuk-colour("black");
  }
}

.landing-page__page_title {
  @include govuk-font($size: 48, $weight: bold);
  color: govuk-colour("white");
  margin-top: govuk-spacing(7);
  margin-bottom: govuk-spacing(4);
}

.landing-page__translation {
  @include govuk-media-query($from: tablet) {
    float: right;
  }
}

.landing-page__contents {
  margin: govuk-spacing(6) 0 govuk-spacing(9) 0;
}

.landing-page__share {
  @include govuk-responsive-margin(8, "top");
}

.landing-page__section {
  margin-top: govuk-spacing(4);
  border-top: 2px solid govuk-colour("black");
  @include govuk-responsive-padding(6, "top");
}

.landing-page__guidance_subheader {
  @include govuk-font(19);
  margin-bottom: govuk-spacing(7);
}

.landing-page__section-list-wrapper {
  margin-bottom: govuk-spacing(6);

  &:before {
    border-top: 1px solid govuk-colour("mid-grey", $legacy: "grey-2");
    content: "";
    display: block;
    margin-right: govuk-spacing(3);
    margin-left: govuk-spacing(3);
    @include govuk-responsive-margin(6, "bottom");
  }
}

.landing-page__section-list {
  @include govuk-font(19);
  margin-bottom: govuk-spacing(3);
  margin-left: govuk-spacing(5);
}

.landing-page__section-see-all {
  @include govuk-font(19);
  margin-top: govuk-spacing(4);
}

.landing-page__section em {
  font-weight: bold;
  font-style: normal;
}

.landing-page__buckets {
  margin-bottom: govuk-spacing(6);
}

.landing-page__email-wrapper {
  @include govuk-responsive-margin(8, "top");
  padding: govuk-spacing(6);
  background-color: govuk-colour("light-grey", $legacy: "grey-4");
  border: 1px solid $govuk-border-colour;
}

.landing-page__email-title {
  margin-bottom: govuk-spacing(2);
}

.landing-page__divide {
  border-top: 1px solid govuk-colour("white");
  padding-top: govuk-spacing(4);
}

.landing-page__finders {
  margin-bottom: 0;
}

.landing-page__comms-video {
  @include govuk-media-query($from: "tablet") {
    position: relative;
    top: -15px;
  }
}

